# ITMO-Programming-2-sem

allocator/: Allocator.cpp  CMakeLists.txt  Pool.cpp  main.cpp
circular_buffer/: CMakeLists.txt  a.out
circular_buffer/include/: algorithms.h  circular_buffer.h  iterator.h
circular_buffer/src/: a.out  main.cpp
compile_time_execution/: CMakeLists.txt  main.cpp
cubik_rubik/: Alghoritms.cpp  Brick.cpp  Brick.h  Camera.cpp  Cube.cpp  Cube.h  Events.cpp  Events.h  main.cpp
lab1c++/geometry/: figure.cpp  figure.h  main.cpp
lab1c++/polynom/: main.cpp  polynom.cpp  polynom.h
test1/: APIInfo.cpp  APIInfo.h  AnalyzeData.cpp  AnalyzeData.h  CMakeLists.txt  CurseAnalyze.cpp  CurseAnalyze.h  DataStorage.cpp  DataStorage.h  JSONParser.cpp  JSONParser.h  Page.cpp  Page.h  main.cpp  t.txt
